--- a/pom.xml
+++ b/pom.xml
@@ -103,22 +103,13 @@
 					<configuration>
 						<consoleOutput>true</consoleOutput>
 						<failsOnError>true</failsOnError>
-						<checkstyleRules>
-							<module name="Checker">
-								<!-- Checks for Size Violations.                             -->
-								<!-- See https://checkstyle.sourceforge.io/config_sizes.html -->
-								<module name="LineLength">
-									<property name="fileExtensions" value="java"></property>
-									<property name="max" value="120"></property>
-									<property name="ignorePattern" value="^package.*|^import.*|.*LOGGER.*"></property>
-								</module>
-								<!-- Checks for whitespace                               -->
-								<!-- See http://checkstyle.sf.net/config_whitespace.html -->
-								<module name="FileTabCharacter"></module>
-							</module>
-						</checkstyleRules>
 					</configuration>
 					<dependencies>
+						<dependency>
+							<groupId>com.github.nhojpatrick.checkstyle</groupId>
+							<artifactId>nhojpatrick-checkstyle-rules</artifactId>
+							<version>[1.0.0,1.0.999)</version>
+						</dependency>
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
@@ -890,6 +881,8 @@
 		<jacoco.bundle.line.coveredratio>100%</jacoco.bundle.line.coveredratio>
 		<pmd.maxAllowedViolations>0</pmd.maxAllowedViolations>
 		<spotbugs.maxAllowedViolations>0</spotbugs.maxAllowedViolations>
+		<!-- checkstyle -->
+		<checkstyle.config.location>com/github/nhojpatrick/checkstyle/rules/rules.xml</checkstyle.config.location>
 		<!-- sortpom -->
 		<sort.createBackupFile>false</sort.createBackupFile>
 		<sort.nrOfIndentSpace>-1</sort.nrOfIndentSpace>
